--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,12 @@
     <link rel="shortcut icon" href="logo-convertme.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <!-- <link rel="apple-touch-icon" href="../src/assets/logo-convertme.png" /> -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <meta name="keywords" content="Conversor, Minificações, JavaScript, CSS">
+    <meta name="description" content="Um site desenvolvido com diversos tipos de Conversor, Minificações em JavaScript, minificações em CSS etc." />
     <title>Convertme</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa ativar o Javascript para a aplicação rodar.</noscript>
     <div id="root"></div>
   </body>
 </html>
