--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="logo-convertme.png" />
-    <link rel="shortcut icon" href="logo-convertme.png" type="image/x-icon" />
+    <link rel="icon" href="logo.png" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="Conversor, Minificações, JavaScript, CSS">
     <meta name="description" content="Um site desenvolvido com diversos tipos de Conversor, Minificações em JavaScript, minificações em CSS etc." />
-    <title>Convertme</title>
+    <title>GRVPPE - Frontend</title>
   </head>
   <body>
     <noscript>Você precisa ativar o Javascript para a aplicação rodar.</noscript>
