--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>GRVPPE - Frontend</title>
+    <title>MovieBD</title>
   </head>
   <body>
     <noscript>Você precisa ativar o Javascript para a aplicação rodar.</noscript>
